--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -12,28 +12,30 @@ To allow (statistically) multiple particles inside the focus to improve the numb
 
 Magnetite nanoparticles coated with oleic acid and dispersed in toluene are bought from NN-Labs (nominal diameters 5\,nm, 10\,nm and 20\,nm), inhibited methylmethacrylate (MMA) and etyhlhexylmethacrylate (EHMA)  (both Sigma Aldrich) were filtered using a prefilled column to remove the inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN, Sigma Aldrich) was used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW ~192k) and ferric chloride (97\%, Sigma Aldrich) was used as received. As solvents, methanol, toluene and chloroform were used.
 \paragraph{Nanoparticles in Polystyrene Matrix} 
-The nanoparticles were precipitated with methanol, centrifuged and redispersed in chloroform at a concentration of 25\,mg/ml (with the weight of nanoparticles including the weight of the oleic acid capping). Polystyrene was dissolved in chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticle solution were added to account for the different iron contents to 5\,ml of the polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of 200\,ul the solution were carefully dropped onto slowly spinning (100\,rpm for 5\,min) glass cover slips (20\,mm x 20\,mm). After drying, the approximately 200\,um thick films were removed from the glass slides.
-As an iron containing control sample, 60\,mg FeCl3 and XXX polystyrene were dissolved in 6\,ml acetone, sonicated and  fractions of 200\,uL were dropped onto slowly spinning glass slides  and carefully removed after drying.
-\begin{table}[tp]
-	\centering
-	\caption{Nanoparticles in polystyrene recipes}
-	\label{tab:samplePS}
-	\begin{tabular}{llll}
-		\hline
-	NP size&   Volume NP in CF &  Iron Concentration &Volume PS in CF    \\
-		\hline
-	  5\,nm&700 ul & & 5\,ml  \\  
-	   10\,nm&  500 ul& &5\,ml  \\    
-	   20\,nm &  425 ul& &5\,ml  \\  
-	   	Control   &  & &5\,ml  \\  
-		\hline
-	\end{tabular}
-\end{table}
+The nanoparticles were precipitated with methanol, centrifuged and redispersed in chloroform at a concentration of 25\,mg/ml (with the weight of nanoparticles including the weight of the oleic acid capping). Polystyrene was dissolved in chloroform at a concentration of 250\,mg/ml. 
+To each of 700\,ul 5\,nm NP, 500\,ul 10\,nm NP and 425\,ul 20\,nm NP 5\,ml of the polystyrene solution were added, accounting for the different iron concentration in the samples.  After ensuring dispersion by strong sonication, fractions of 200\,ul the solution were carefully dropped onto slowly spinning (100\,rpm for 5\,min) glass cover slips (20\,mm x 20\,mm). After drying, the approximately 200\,um thick films were removed from the glass slides.
+
+As a control sample with approximately equal iron concentration, 60\,mg FeCl3 and 25\,g polystyrene were dissolved in 10\,ml acetone, sonicated and  fractions of 200\,uL were dropped onto slowly spinning glass slides  and carefully removed after drying.
+%\begin{table}[tp]
+%	\centering
+%	\caption{Nanoparticles in polystyrene recipes}
+%	\label{tab:samplePS}
+%	\begin{tabular}{llll}
+%		\hline
+%	NP size&   Volume NP in CF  &Volume PS in CF    \\
+%		\hline
+%	  5\,nm&700 ul & & 5\,ml  \\  
+%	   10\,nm&  500 ul& &5\,ml  \\    
+%	   20\,nm &  425 ul& &5\,ml  \\  
+%	   	Control   &  & &5\,ml  \\  
+%		\hline
+%	\end{tabular}
+%\end{table}
 
 \paragraph{Nanoparticles in Poly-(methyl methacrylate / etylhexyl methacrylate)  Matrix}
 As a second nanoparticle in polymer sample, an azobisisobutyronitrile initiated methyl methacrylate (MMA)/etylhexyl methacrylate (EHMA) polymerization with magnetite nanoparticles was performed. 
-The nanoparticle solution was concentrated to XXX in toluene by precipitation, centrifugation and redispersion. To account for the different iron concentration, to slightly varying amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution  bubbled with N$_2$ for 5\,min. To start the polymerization, 20\,mg of AIBN was added and the solution was bubbled again with N$_2$  for 10\,min before heating to XX under weak sonication using a sonic bath. The mixture was kept at temperature for XXX.
-The vials were uncapped and the polymer dried for 12h at 60°C. The polymer was removed from the vials and cut into slices of approximately (150$\pm$20)\,um thickness using a slow spinning diamond saw.
+The nanoparticle solutions as bought were concentrated to 25\,mg/ml in toluene by precipitation with methanol, centrifugation and redispersion.  To varying amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA was added each to account for the different iron concentrations (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution  bubbled with N$_2$ for 5\,min. To start the polymerization, 20\,mg of AIBN was added and the solution was bubbled again with N$_2$  for 10\,min before heating to 60°C under weak sonication using a sonic bath. The mixture was kept at temperature for 12h.
+The vials were uncapped and the polymer dried for 12h at 50°C. The polymer was removed from the vials and cut into slices of approximately (150$\pm$20)\,um thickness using a slow spinning diamond saw.
 As a control sample, the polymerization was performed without any nanoparticles added.
 
 \begin{table}[tp]
@@ -44,11 +46,11 @@ As a control sample, the polymerization was performed without any nanoparticles 
 		\hline
 		NP size &NP in Toluene&Toluene & EHMA & MMA & AIBN \\
 		\hline
-		5\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
-		10\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
-		10\,nm& & &0\,ul&  4\,ml&   20\,mg    \\
-		20\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
-			Control& & 1\,ml&800\,ul&  3.2\,ml&   20\,mg    \\
+		5\,nm&1 \,ml & 0\,ml&0.8\,ml&  3.2\,ml&   20\,mg    \\
+		10\,nm& 0.8\,ml& 0.2\,ml & 0.8\,ml&  3.2\,ml&   20\,mg    \\
+		10\,nm& 0.8\,ml& 0,2\,ml &            &  4\,ml   &   20\,mg    \\
+		20\,nm& 0.6\,ml& 0.4\,ml& 0.8\,ml&  3.2\,ml&   20\,mg    \\
+		Control&           & 1\,ml     &800\,ul&  3.2\,ml&   20\,mg    \\
 		\hline
 	\end{tabular}
 \end{table}
