--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,13 +3,13 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from a few orientations and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, pulse duration, focal spot size, sample thickness, precise alignment of the detector, correction of misalignment, and handling of detector artifacts in the analysis are identified as relevant parameters for experimental success. A photon counting method with reduced artifacts in the correlations based on a single pixel maximum likelihood classification is presented.
+In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, pulse duration, focal spot size, sample thickness, precise alignment of the detector, identification and correction of misalignment, and handling of detector artifacts in the analysis are identified as relevant parameters for experimental success. A photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented.
 
 These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
-Spherical iron nanoparticles deposited in polymer matrices are chosen as a nanometer-scaled sample to control the number of particles in the focal volume and characterized using electron microscopy and small-angle scattering, showing undesirable aggregation of the particles and reduction of the visibility of the structure factor. Thin gallium arsenide single crystal films are used to try to capture the Bragg peaks in the reconstruction. Analysis of Kossel lines reduced the misalignment not corrected in the crystal data analysis to $\pm$0.2°. 
-The results of the previously reported imaging of the focus could be reproduced by using iron and copper foils as a sample, measuring the focal width in horizontal direction as (240$\pm$20)\,nm estimating from the observed low contrast the number of modes overlaid in the measurement as >200.  Neither for the nanoparticle samples nor the single crystals any features of the structure factor could be recovered.
+Spherical iron nanoparticles deposited in polymer matrices were chosen as a nanometer-scaled and characterized using electron microscopy and small-angle scattering, showing undesirable aggregation of the particles and reduction of the visibility of the structure factor. Thin gallium arsenide single crystal films were used to try to capture the Bragg peaks in the reconstruction. 
+The results of the previously reported imaging of the focus could be reproduced by using iron and copper foils as a sample, measuring the focal width in the horizontal direction as (240$\pm$20)\,nm while estimating from the observed low contrast the number of modes overlaid in the measurement as >200. Analysis of Kossel lines reduced the misalignment not corrected in the crystal data analysis to $\pm$0.2°. However, neither about the nanoparticle samples nor the single crystals, any features in the structure factor could be recovered.
 
 Even though the goal of increasing the resolution could not be achieved, this work may provide a basis for upcoming experiments.
 
@@ -24,9 +24,9 @@ Even though the goal of increasing the resolution could not be achieved, this wo
  	\textbf{Kurzfassung}\vspace{12mm}
  \end{Huge}
 \\
-Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht die in der astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen um aus Röntgenfluoreszens hochaufgelöste Strukturinformationen über eine Proble zu extrahieren \cite{classen2017}.  
-In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wird jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
+Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht mittels der in der  astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen aus Röntgenfluoreszens zu extrahieren \cite{classen2017}.  
+In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wurde jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
 
-In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen (Eisennanopartikel) und dreidimensionaler Messung von Einkristellen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die (für IDI erstmalige) Anwendung von Kossellinien basierter Orientierungsbestimmung.  
+In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen und dreidimensionaler Messung von Einkristallen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die für IDI erstmalige Anwendung von Kossellinien basierter Orientierungsbestimmung. 
 Es gelang, die Abbildung des Fokus erfolgreich zu reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
 \end{otherlanguage}
