--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -2,7 +2,7 @@
 %\pdfminorversion=5 
 \RequirePackage[2020-02-02]{latexrelease}
 \pdfsuppresswarningpagegroup=1
-\documentclass[12pt,a4paper,oneside]{book}
+\documentclass[12pt,a4paper,twoside]{book}
 
 %Packages
 \usepackage[utf8]{inputenc}
@@ -300,7 +300,6 @@
 	\acro{EHMA}{Etyhlhexymethacrylate}
 	\acro{GaAs}{Galliumarsenide}
 	\acro{AAO}{Anodic alumina oxide}
-	\acro{SNR}{Signal to noise ratio}
 	\acro{PSF}{Point spread function}
 	\acro{SNR}{Signal to noise ratio}
 	\acro{FWHM}{Full width at half maximum}
