--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -6,7 +6,7 @@ In X-ray imaging, the usage of synchrotron radiation and finally the advent of f
 
 Recently, Classen et al. suggested instead to \textit{use} the fluorescence for imaging in a new method they termed \textit{Incoherent Diffractive Imaging} (IDI) based on the concept of intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{classen2017,hanbury1956}.  Hanbury-Brown and Twiss's (HBT) experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}: While in a semi-classical picture of the observed correlations can be explained by an averaging out of the instantaneous random phases in the correlation function, the quantum mechanical interpretation has to consider multi-photon states with indistinguishable paths. Accordingly, the premise of IDI is, as long as the fluorescence can be recorded in a time interval of similar length as its coherence time, the phase fluctuation within a single measurement can be considered as almost stationary. Averaging over enough pairs of intensities in the far-field suppresses the random contribution to the phases but preserves phase difference due to the spatial distribution of the emitters, allowing the recovery of the sought-for spatial information about the sample.
 
-For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limited access to three-dimensional information  (only on a two dimensional surface inside the reciprocal space), IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Taken together, IDI promises to enhance the imaging capabilities using FELs  greatly.
+For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limited access to a two-dimensional surface inside the  three-dimensional reciprocal space, IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Taken together, IDI promises to enhance the imaging capabilities using FELs  greatly.
 
 An already established, related technique, X-ray photon correlation spectroscopy (XPCS), uses intensity fluctuations in coherent X-ray speckle patterns introduced by temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}. Furthermore, intensity correlation measurements have been used at synchrotrons and FELs to measure the coherence properties of the beam and for scattering experiments in which the incoherence was created by a separate diffusor \cite{yabashi2002,singer2013,inoue2019,gorobtsov2018,schneider2018}.  Nevertheless, thus far, the only successful experiment applying intensity correlations of inner shell fluorescence to imaging used a metal foil as the sample to measure merely the size of the excitation beam's focal spot \cite{nakumura2020}. No proof-of-principle experiment proving the potential for high-resolution imaging has yet been published. 
 
