--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -54,7 +54,7 @@ As a control sample, the polymerization was performed without any nanoparticles 
 		\hline
 	\end{tabular}
 \end{table}
-%XXX TODO: LOOK THROUGH LOG TO FIND FINAL NUIMBERS USED XXX
+
 \paragraph{Nanoparticle Sample Characterisation}
 To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received were diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
 
@@ -145,7 +145,7 @@ The samples were scanned with a mean step size of 20\,um in horizontal direction
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{images/setup.pdf}
-	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is XXX. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the the FEL beam. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
+	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is 45°. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the the FEL beam. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
 	\label{fig:setup}
 \end{figure}
 \paragraph{Imaging the Focus}
@@ -272,7 +272,7 @@ For the nanoparticle data, the maximum recorded angles are higher and at the lim
 For the crystal data, a full 3d correlation of the rotation and offset corrected data was performed using the resampled FFT-based approach.
 
 
-\section{Results}
+\section{Results of the Experiment}
 Applying the aforementioned preprocessing and analysis steps to the recorded fluorescence images for all three classes of samples leads to results as follows. 
 \subsection{Imaging the Focus}
 
